--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -15,8 +15,8 @@ button {
 .button-container {
   height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content: center;
   margin-top: 5%;
 }
 
