--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -6,14 +6,14 @@ body {
 .game-container {
   height: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin-top: 5%;
 }
 
 .game-card {
   height: 10%;
-  width: 25%;
+  width: 450px;
   background-color: #025367;
   border-radius: 4%;
   padding: 0 1% 0 1%;
