--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -14,9 +14,10 @@ button {
 
 .button-container {
   height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  display: grid;
+  grid-column: repeat(4, 1fr);
+  /* flex-direction: row;
+  justify-content: center; */
   margin-top: 5%;
 }
 
