--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -16,8 +16,7 @@ button {
   height: 100%;
   display: grid;
   grid-column: repeat(4, 1fr);
-  /* flex-direction: row;
-  justify-content: center; */
+  justify-items: center;
   margin-top: 5%;
 }
 
