--- a/src/components/QuestionCard/QuestionCard.css
+++ b/src/components/QuestionCard/QuestionCard.css
@@ -5,7 +5,7 @@
   border-radius: 4%;
   padding: 0 1% 0 1%;
   box-shadow: 6px 8px 10px #BABD8D;
-  /* box-shadow: 6px 8px 10px #FF8221; */
+  text-align: center;
 }
 
 .like-button {
