--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 5%;
+  margin: 5%;
 }
 
 .game-card {
@@ -18,6 +18,7 @@ body {
   border-radius: 4%;
   padding: 0 1% 0 1%;
   box-shadow: 6px 8px 10px #BABD8D;
+  text-align: center;
 }
 
 .delete-button {
