Refactor title and description

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,7 @@
 .title {
+  text-align: center;
+  padding-left: 20%;
+  padding-right: 20%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 }
