--- a/src/components/Questions/Questions.css
+++ b/src/components/Questions/Questions.css
@@ -1,10 +1,6 @@
 .questions-container {
   display: flex;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-direction: column;
   margin: 2%;
+  flex-wrap: wrap;
+  justify-content: center;
 }
