--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,10 +4,12 @@
   padding-right: 20%;
   display: flex;
   flex-direction: column;
+  font-size: 25px;
 }
 
 .home, .view-game {
-  width: 90px;
+  width: 85px;
   height: 50px;
   margin: 1%;
+  font-size: 12px;
 }
