--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,39 +5,38 @@
   display: flex;
   flex-direction: column;
   font-size: 25px;
-  -webkit-animation: rotate-scale-up 0.65s linear both;
-	        animation: rotate-scale-up 0.65s linear both;
+  -webkit-animation: rotate-scale-down-ver 0.65s linear both;
+  animation: rotate-scale-down-ver 0.65s linear both;
 }
 
-@-webkit-keyframes rotate-scale-up {
+@-webkit-keyframes rotate-scale-down-ver {
   0% {
-    -webkit-transform: scale(1) rotateZ(0);
-            transform: scale(1) rotateZ(0);
+    -webkit-transform: scale(1) rotateY(0);
+            transform: scale(1) rotateY(0);
   }
   50% {
-    -webkit-transform: scale(2) rotateZ(180deg);
-            transform: scale(2) rotateZ(180deg);
+    -webkit-transform: scale(0.5) rotateY(180deg);
+            transform: scale(0.5) rotateY(180deg);
   }
   100% {
-    -webkit-transform: scale(1) rotateZ(360deg);
-            transform: scale(1) rotateZ(360deg);
+    -webkit-transform: scale(1) rotateY(360deg);
+            transform: scale(1) rotateY(360deg);
   }
 }
-@keyframes rotate-scale-up {
+@keyframes rotate-scale-down-ver {
   0% {
-    -webkit-transform: scale(1) rotateZ(0);
-            transform: scale(1) rotateZ(0);
+    -webkit-transform: scale(1) rotateY(0);
+            transform: scale(1) rotateY(0);
   }
   50% {
-    -webkit-transform: scale(2) rotateZ(180deg);
-            transform: scale(2) rotateZ(180deg);
+    -webkit-transform: scale(0.5) rotateY(180deg);
+            transform: scale(0.5) rotateY(180deg);
   }
   100% {
-    -webkit-transform: scale(1) rotateZ(360deg);
-            transform: scale(1) rotateZ(360deg);
+    -webkit-transform: scale(1) rotateY(360deg);
+            transform: scale(1) rotateY(360deg);
   }
 }
-
 
 .home, .view-game {
   width: 85px;
