--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,46 +1,34 @@
+.header {
+  background: #ABBAB1;
+  display: flex;
+  justify-content: center;
+}
+
+h1 {
+  margin: 0;
+}
+
 .title {
   text-align: center;
-  padding-left: 20%;
-  padding-right: 20%;
-  display: flex;
-  flex-direction: column;
-  font-size: 25px;
-  -webkit-animation: rotate-scale-down-ver 0.65s linear both;
-  animation: rotate-scale-down-ver 0.65s linear both;
+  font-size: 2em;
 }
 
-@-webkit-keyframes rotate-scale-down-ver {
-  0% {
-    -webkit-transform: scale(1) rotateY(0);
-            transform: scale(1) rotateY(0);
-  }
-  50% {
-    -webkit-transform: scale(0.5) rotateY(180deg);
-            transform: scale(0.5) rotateY(180deg);
-  }
-  100% {
-    -webkit-transform: scale(1) rotateY(360deg);
-            transform: scale(1) rotateY(360deg);
-  }
-}
-@keyframes rotate-scale-down-ver {
-  0% {
-    -webkit-transform: scale(1) rotateY(0);
-            transform: scale(1) rotateY(0);
-  }
-  50% {
-    -webkit-transform: scale(0.5) rotateY(180deg);
-            transform: scale(0.5) rotateY(180deg);
-  }
-  100% {
-    -webkit-transform: scale(1) rotateY(360deg);
-            transform: scale(1) rotateY(360deg);
-  }
-}
-
-.home, .view-game {
-  width: 85px;
+.home {
+  /* margin-left: 10vw; */
+  border: none;
+  border-radius: 100px;
+  align-items: center;
   height: 50px;
-  margin: 1%;
-  font-size: 12px;
+  width: 50px;
+  background: #8F9E96;
+}
+
+.view-game {
+  /* margin-right: 10vw; */
+  border: none;
+  border-radius: 100px;
+  align-items: center;
+  height: 50px;
+  width: 50px;
+  background: #8F9E96;
 }
