Style category buttons

--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -1,19 +1,21 @@
 body {
   height: 100%;
-  background-color: #003046;
+  background-image: url(assets/background.jpg);
+  background-size: 100%;
   color: #FFFFFF;
   font-family: 'Didact Gothic', sans-serif;
 }
 
 button {
+  font-size: 1.5em;
   cursor: pointer;
   color: #FFFFFF;
-  background-color: #CC9226;
-  height: 100px;
-  width: 120px;
+  background-color: #8F9E96;
+  height: 150px;
+  width: 150px;
   border: none;
-  border-radius: 5%;
-  box-shadow: 3px 4px 5px #025367;
+  border-radius: 100px;
+  box-shadow: 3px 4px 5px #B2A691;
   margin: 10%;
 }
 
@@ -22,22 +24,8 @@ button:hover {
 }
 
 .button-container {
-  /* height: 100%; */
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  /* margin-top: 5%; */
-  margin: 5%;
- padding-left: 10%;
- padding-right: 10%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 1em;
+  margin: 10% 5% 5%;
 }
-
-/* .top-row,
-.lower-row {
-  height: 25%;
-  width: 50%;
-  display: flex; 
-  flex-direction: row;
-  justify-content: space-around;
-  margin-bottom: 5%;
-} */
