--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,7 +20,7 @@ h1 {
   align-items: center;
   height: 50px;
   width: 50px;
-  background: #8F9E96;
+  background: #FC9987;
   font-size: .8em;
 }
 
@@ -32,5 +32,5 @@ h1 {
   align-items: center;
   height: 50px;
   width: 50px;
-  background: #8F9E96;
+  background: #FC9987;
 }
