--- a/src/components/QuestionCard/QuestionCard.css
+++ b/src/components/QuestionCard/QuestionCard.css
@@ -1,6 +1,6 @@
 .card {
   box-sizing: border-box;
-  height: 450px;
+  height: 525px;
   width: 400px;
   background-color: #8F9E96;
   border-radius: 4%;
@@ -20,3 +20,15 @@
   background-color: #FC9987;
 }
 
+.question-div {
+  background: #B2A691;
+  padding: 5%;
+  border-radius: 10%;
+}
+
+.answer-container {
+  background: #EDE7DA;
+  color: #8F9E96;
+  padding: 5%;
+  border-radius: 10%;
+}
