Add padding to titles

--- a/src/components/QuestionCard/QuestionCard.css
+++ b/src/components/QuestionCard/QuestionCard.css
@@ -18,6 +18,7 @@
   box-shadow: none;
   font-size: 12px;
   background-color: #FC9987;
+  margin-top: 3%;
 }
 
 .question-div {
@@ -31,4 +32,12 @@
   color: #8F9E96;
   padding: 5%;
   border-radius: 10%;
+}
+
+.category-title {
+  padding-top: 5%;
+}
+
+.delete-button {
+  margin-top: 3%;
 }
