--- a/src/components/QuestionCard/QuestionCard.css
+++ b/src/components/QuestionCard/QuestionCard.css
@@ -9,7 +9,7 @@
   text-align: center;
   padding-left: 3%;
   padding-right: 3%;
-  margin: 0 10% 0 10%;
+  margin: 7% 10% 0 10%;
 }
 
 .like-button {
