--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -29,3 +29,22 @@ button:hover {
   grid-gap: 1em;
   margin: 10% 5% 5%;
 }
+
+@media screen and (max-width: 1000px) {
+  .button-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .button-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .button-container {
+    text-align: center;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
