--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -4,11 +4,11 @@ body {
 }
 
 .game-container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 5%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1em;
+  margin: 10% 5% 5% 10%;
 }
 
 .game-card {
@@ -31,4 +31,31 @@ body {
   box-shadow: none;
   font-size: 12px;
   background-color: #FC9987;
+}
+
+
+@media screen and (max-width: 1000px) {
+  .game-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .game-container {
+    grid-template-columns: repeat(1, 1fr);
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .game-container {
+    text-align: center;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .game-card {
+    height: 500px;
+    width: 300px;
+    margin: 0;
+    margin-top: 15%;
+  }
 }
