--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -1,7 +1,9 @@
 body {
   height: 100%;
   background-image: url(assets/background.jpg);
-  background-size: 100%;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat; 
   color: #FFFFFF;
   font-family: 'Raleway', sans-serif;
 }
