--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,14 +1,8 @@
-body {
-  height: 100%;
-  background-color: #003046;
-}
-
 .game-container {
-  margin: 5%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1em;
-  margin: 10% 5% 5% 10%;
+  margin-top: 20%;
 }
 
 .game-card {
@@ -34,28 +28,27 @@ body {
 }
 
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1220px) {
   .game-container {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
 @media screen and (max-width: 600px) {
   .game-container {
     grid-template-columns: repeat(1, 1fr);
-    align-items: center;
   }
 }
 
 @media screen and (max-width: 500px) {
   .game-container {
-    text-align: center;
     grid-template-columns: repeat(1, 1fr);
   }
   .game-card {
-    height: 500px;
-    width: 300px;
+    margin-top: 20%;
+    /* height: 525px;
+    width: 400px;
     margin: 0;
-    margin-top: 15%;
+    margin-top: 15%; */
   }
 }
