--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,14 +1,13 @@
 .game-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 1em;
-  margin-top: 20%;
 }
 
 .game-card {
+  width: 350px;
+  height: 500px;
   box-sizing: border-box;
-  height: 525px;
-  width: 400px;
   background-color: #8F9E96;
   border-radius: 4%;
   padding: 0 1% 0 1%;
@@ -16,7 +15,7 @@
   text-align: center;
   padding-left: 3%;
   padding-right: 3%;
-  margin: 0 10% 0 10%;
+  margin: 100px auto 0px;
 }
 
 .delete-button {
@@ -30,11 +29,11 @@
 
 @media screen and (max-width: 1220px) {
   .game-container {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .game-container {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -43,12 +42,5 @@
 @media screen and (max-width: 500px) {
   .game-container {
     grid-template-columns: repeat(1, 1fr);
-  }
-  .game-card {
-    margin-top: 20%;
-    /* height: 525px;
-    width: 400px;
-    margin: 0;
-    margin-top: 15%; */
   }
 }
